--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Django==5.2
 gunicorn==23.0.0
-
 whitenoise==6.11.0
 pillow==11.3.0
 python-slugify==8.0.4
@@ -10,5 +9,21 @@ arrow==1.3.0
 asgiref==3.8.1
 sqlparse==0.5.3
 rich==14.0.0
-
+binaryornot==0.4.4
+certifi==2025.1.31
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
+cookiecutter==2.6.0
+Jinja2==3.1.6
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+packaging==25.0
+python-dateutil==2.9.0.post0
+six==1.17.0
+urllib3==2.4.0
+types-python-dateutil==2.9.0.20241206
+Pygments==2.19.1
 django-tailwind==4.0.1
+django-browser-reload==1.18.0
